--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
-    "socket-io": "^1.0.0"
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.8.1"
   },
   "name": "server",
   "version": "1.0.0",
