--- a/teamstudy/package.json
+++ b/teamstudy/package.json
@@ -13,9 +13,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "framer-motion": "^12.4.4",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
@@ -31,6 +37,6 @@
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "vite": "^6.0.11"
   }
 }
